--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "async": "^2.0.1",
-    "node-hid": "^0.5.2",
+    "node-hid": "git@github.com:node-hid/node-hid.git",
     "psl": "^1.1.14",
     "request": "^2.75.0"
   },
